--- a/style.css
+++ b/style.css
@@ -18,7 +18,6 @@ body {
 .text {
   font-family: 'Montserrat Alternates', sans-serif;
   font-size: 26px;
-  text-align: center;
   margin-bottom: 30px;
 }
 .text.link {
@@ -86,6 +85,19 @@ body {
   border: 1px solid #D9D9D9;
   font-family: 'Montserrat Alternates', sans-serif;
   font-size: 16px;
+}
+.table_cesar .start,
+.table_cesar .finish {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+.table_cesar .start p,
+.table_cesar .finish p {
+  border: 1px solid #D9D9D9;
+  width: 30px;
+  padding: 0 5px;
+  margin: 0;
 }
 .mb-0 {
   margin-bottom: 0!important;
