--- a/style.less
+++ b/style.less
@@ -6,7 +6,6 @@ body{
 .text{
   font-family: 'Montserrat Alternates', sans-serif;
   font-size: 26px;
-  text-align: center;
   margin-bottom: 30px;
   &.link{
     color: #1d181f;
@@ -77,6 +76,19 @@ body{
   border: 1px solid #D9D9D9;
   font-family: 'Montserrat Alternates', sans-serif;
   font-size: 16px;
+}
+.table{
+  &_cesar{
+    .start, .finish{
+      display: flex;
+      p{
+        border: 1px solid #D9D9D9;
+        width: 30px;
+        padding: 0 5px;
+        margin: 0;
+      }
+    }
+  }
 }
 
 .mb-0{
