vigener dont work

--- a/style.less
+++ b/style.less
@@ -89,6 +89,27 @@ body{
       }
     }
   }
+  &_viger{
+    #table{
+      .line{
+        display: flex;
+        p{
+          border: 1px solid #D9D9D9;
+          width: 30px;
+          padding: 0 5px;
+          margin: 0;
+          &.f{
+            background-color: fade(#48a1a9, 20%);
+          }
+        }
+        &.first{
+          p{
+            background-color: fade(#48a1a9, 20%);
+          }
+        }
+      }
+    }
+  }
 }
 
 .mb-0{
