--- a/style.css
+++ b/style.css
@@ -99,6 +99,23 @@ body {
   padding: 0 5px;
   margin: 0;
 }
+.table_viger #table .line {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+.table_viger #table .line p {
+  border: 1px solid #D9D9D9;
+  width: 30px;
+  padding: 0 5px;
+  margin: 0;
+}
+.table_viger #table .line p.f {
+  background-color: rgba(72, 161, 169, 0.2);
+}
+.table_viger #table .line.first p {
+  background-color: rgba(72, 161, 169, 0.2);
+}
 .mb-0 {
   margin-bottom: 0!important;
 }
