--- a/style.css
+++ b/style.css
@@ -84,7 +84,10 @@ body {
   padding: 10px;
   border: 1px solid #D9D9D9;
   font-family: 'Montserrat Alternates', sans-serif;
+}
+.res p {
   font-size: 16px;
+  word-break: break-word;
 }
 .table_cesar .start,
 .table_cesar .finish {
