--- a/style.less
+++ b/style.less
@@ -75,7 +75,10 @@ body{
   padding: 10px;
   border: 1px solid #D9D9D9;
   font-family: 'Montserrat Alternates', sans-serif;
-  font-size: 16px;
+  p{
+    font-size: 16px;
+    word-break: break-word;
+  }
 }
 .table{
   &_cesar{
